--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsc -w",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "ci": "pnpm run lint && pnpm run format && pnpm run start",
+    "lint": "eslint src/ --ext .js,.ts,.tsx,.jsx --fix",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|jsx|tsx|json)\""
   },
   "keywords": [],
   "author": "",
