--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,17 @@
 {
-    "$schema": "https://json.schemastore.org/tsconfig",
-    "display": "Node LTS",
-    "_version": "18.1.0",
-    "compilerOptions": {
-      "lib": ["es2023"],
-      "module": "node16",
-      "target": "es2022",
-      "strict": true,
-      "outDir": "dist",
-      "esModuleInterop": true,
-      "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true,
-      "moduleResolution": "node16"
-    },
-    "include": [
-        "src"
-    ]
-  }
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Node LTS",
+  "_version": "18.1.0",
+  "compilerOptions": {
+    "lib": ["es2023"],
+    "module": "node16",
+    "target": "es2022",
+    "strict": true,
+    "outDir": "dist",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node16"
+  },
+  "include": ["src"]
+}
