--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsc -w",
+    "dev:www": "vite .www/",
     "start": "node dist/index.js",
     "ci": "pnpm run lint && pnpm run format && pnpm run start",
     "lint": "eslint src/ --ext .js,.ts,.tsx,.jsx --fix",
@@ -15,6 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.8.5",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
@@ -23,6 +26,9 @@
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.11"
   }
 }
