--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "display": "Node LTS",
   "_version": "18.1.0",
   "compilerOptions": {
-    "lib": ["es2023"],
+    "jsx": "react",
+    "lib": ["es2023", "DOM"],
     "module": "node16",
     "target": "es2022",
     "strict": true,
@@ -13,5 +14,5 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node16"
   },
-  "include": ["src"]
+  "include": ["src", ".www/app.tsx", ".www/main.tsx"]
 }
